crates/baml-rt-builder/tests/snapshots/codegen_test__baml_array_types.snap
---
source: crates/baml-rt-builder/tests/codegen_test.rs
expression: baml_output
---
class ArrayTest {
  items string[]
}
