crates/baml-rt-builder/tests/snapshots/codegen_test__baml_class_from_schema.snap
---
source: crates/baml-rt-builder/tests/codegen_test.rs
expression: baml_output
---
class Expression {
  left int
  right int
  optional_field string?
}
