crates/baml-rt-builder/tests/snapshots/codegen_test__baml_nested_types_from_schema.snap
---
source: crates/baml-rt-builder/tests/codegen_test.rs
expression: baml_output
---
class Expression {
  left int
  operation MathOperation
  right int
}

enum MathOperation {
  Add
  Subtract
  Multiply
  Divide
}
