crates/baml-rt-builder/tests/snapshots/codegen_test__baml_primitives_in_class.snap
---
source: crates/baml-rt-builder/tests/codegen_test.rs
expression: baml_output
---
class PrimitiveTest {
  int_field int
  float_field float
  string_field string
  bool_field bool
}
